Upgrade Gradle and libraries